--- a/notebooks/tweet_extract.ipynb
+++ b/notebooks/tweet_extract.ipynb
@@ -2,38 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "from PIL import Image\n",
-    "from pytesseract import image_to_boxes\n"
+    "import pytesseract as pt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "df = pt.image_to_data(\"./test_images/v1.jpg\", output_type=pt.Output.DATAFRAME)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'image_to_boxes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-1-19e654b7b688>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0mimage_to_boxes\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"./test_images/v3.jpg\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m: name 'image_to_boxes' is not defined"
-     ]
+     "data": {
+      "text/plain": "0          NaN\n1          NaN\n2          NaN\n3          NaN\n4           Ed\n        ...   \n74         not\n75    directly\n76         due\n77          to\n78    COVID-19\nName: text, Length: 79, dtype: object"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "image_to_boxes(\"./test_images/v3.jpg\")"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
